repaired outputs, notifications in backgroundfragment, basefragment for acc & background

--- a/app/src/main/res/layout/background_fragment_async.xml
+++ b/app/src/main/res/layout/background_fragment_async.xml
@@ -2,12 +2,73 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+
+
+    <LinearLayout
+        android:id="@+id/rel_lay_spinnertime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"     >
+
+        <TextView
+            android:id="@+id/t01"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="@string/spinner_time_prompt"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <Spinner
+            android:id="@+id/spinner_time"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:prompt="@string/spinner_time_prompt"
+            android:spinnerMode="dropdown"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:text="minutes"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/rel_lay_spinnerfreq"
+        android:layout_below="@+id/rel_lay_spinnertime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"     >
+
+        <TextView
+            android:id="@+id/t02"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="@string/spinner_interval_prompt"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <Spinner
+            android:id="@+id/spinner_interval"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:prompt="@string/spinner_interval_prompt"
+            android:spinnerMode="dropdown"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:text="second"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    </LinearLayout>
+
+
     <Button
         android:id="@+id/btnstart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start AsyncTask"
-        android:layout_below="@+id/spinner_interval"
+        android:text="Start New AsyncTask"
+        android:layout_below="@+id/rel_lay_spinnerfreq"
         android:layout_centerHorizontal="true" />
 
     <ProgressBar
@@ -43,32 +104,5 @@
         android:id="@+id/tvper"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Create"
-        android:id="@+id/btncreate"
-        android:layout_above="@+id/btncancel"
-        android:layout_centerHorizontal="true" />
-
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner_time"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:prompt="@string/spinner_time_prompt"
-        android:spinnerMode="dropdown" />
-
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner_interval"
-        android:layout_below="@+id/spinner_time"
-        android:layout_centerHorizontal="true"
-        android:prompt="@string/spinner_interval_prompt"
-        android:spinnerMode="dropdown" />
 
 </RelativeLayout>
