--- a/app/src/main/res/layout/background_activity.xml
+++ b/app/src/main/res/layout/background_activity.xml
@@ -2,6 +2,64 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/rel_lay_spinnertime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"     >
+
+        <TextView
+            android:id="@+id/t01"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="@string/spinner_time_prompt"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <Spinner
+            android:id="@+id/spinner_time"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:prompt="@string/spinner_time_prompt"
+            android:spinnerMode="dropdown"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:text="minutes"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/rel_lay_spinnerfreq"
+        android:layout_below="@+id/rel_lay_spinnertime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"     >
+
+        <TextView
+            android:id="@+id/t02"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="@string/spinner_interval_prompt"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <Spinner
+            android:id="@+id/spinner_interval"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:prompt="@string/spinner_interval_prompt"
+            android:spinnerMode="dropdown"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:text="second"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    </LinearLayout>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -10,11 +68,13 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
-    <Switch
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="WakefulBroadcastReceiver / Service"
-        android:id="@+id/switch_background"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text=""
+        android:id="@+id/statusText"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
