--- a/app/src/main/res/layout/rotationvector_layout.xml
+++ b/app/src/main/res/layout/rotationvector_layout.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-
+   <!--
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/title_rotationvector"
-        android:id="@+id/id_title_rotationvector" />
+        android:id="@+id/id_title_rotationvector" />-->
 
-    <TextureView
-        android:layout_below="@id/id_title_rotationvector"
-        android:layout_marginBottom="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+    <FrameLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/surface_view" />
+        android:layout_height="fill_parent"
+        android:id="@+id/camera_view" />
 
     <Button
         android:layout_width="wrap_content"
