--- a/app/src/main/res/layout/background_activity.xml
+++ b/app/src/main/res/layout/background_activity.xml
@@ -16,48 +16,12 @@
 
         <Spinner
             android:id="@+id/spinner_time"
-            android:layout_width="60dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:prompt="@string/spinner_time_prompt"
             android:spinnerMode="dropdown"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <TextView
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:text="minutes"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/rel_lay_spinnerfreq"
-        android:layout_below="@+id/rel_lay_spinnertime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"     >
-
-        <TextView
-            android:id="@+id/t02"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="@string/spinner_interval_prompt"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        <Spinner
-            android:id="@+id/spinner_interval"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:prompt="@string/spinner_interval_prompt"
-            android:spinnerMode="dropdown"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <TextView
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:text="milisecond"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
     </LinearLayout>
 
     <Button
@@ -68,13 +32,63 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/btnService"
+        android:layout_alignParentStart="true">
+
+        <RadioGroup android:id="@+id/senzor_radio"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5px">
+            <RadioButton
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/high_freq"
+                android:text="Accelerometer, Magnetometer, Gyroscope" />
+            <RadioButton
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/mid_freq"
+                android:text="Rotation, Orientation, Gravity" />
+            <RadioButton
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/low_freq"
+                android:text="Proximity, Light" />
+        </RadioGroup>
+
+    </LinearLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text=""
-        android:id="@+id/statusText"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/status_text3"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/status_text2"
+        android:layout_above="@+id/status_text3"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/status_text1"
+        android:layout_above="@+id/status_text2"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
